# ontoink

./: .dockerignore  .env.sample  .gitignore  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  NOTICE  README.md  TESTING.md  docker-compose.yml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker.yml  publish.yml
assets/: extra.css
changelog/: index.html
cite/: index.html
contributing/: index.html
demo/: mkdocs.yml  mkdocs_all.yml
demo/docs/: anti-patterns.md  changelog.md  cite.md  contributing.md  embedding.md  getting-started.md  index.md  live-editor-syntax.md  live-editor.md  ontosniff.md  playground.md  shacl-editor.md  sparql-explorer.md
demo/docs/anti-pattern-shapes/and-is-or/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/conflicting-cardinality/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/deactivated-shape/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/disjointness-of-complement/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/equivalence-is-difference/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/inverse-of-self/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/is-relationship/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/min-is-zero/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/missing-disjointness/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/multiple-domain-range/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/onlyness-is-loneliness/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/recursive-definition/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/shape-without-target/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/some-means-at-least-one/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/sum-of-some/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/sum-of-some-is-never-equal-to-one/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/synonym-of-equivalence/: data.ttl  shape.ttl
demo/docs/anti-pattern-shapes/universal-existence/: data.ttl  shape.ttl
demo/docs/anti-patterns/: and-is-or.md  conflicting-cardinality.md  cyclic-subclass.ttl  deactivated-shape.md  disjointness-of-complement.md  equivalence-is-difference.md  inverse-of-self.md  is-relationship.md  lazy-class.ttl  min-is-zero.md  missing-disjointness.md  missing-domain-range.ttl  missing-label.ttl  multiple-domain-range.md  onlyness-is-loneliness.md  orphan-class.ttl  property-soup.ttl  recursive-definition.md  shacl-shapes.ttl  shape-without-target.md  some-means-at-least-one.md  sum-of-some-is-never-equal-to-one.md  sum-of-some.md  synonym-of-equivalence.md  universal-existence.md
demo/docs/assets/: coi-serviceworker.js  deploy-mkdocs-pages.yml  extra.css
demo/docs/assets/shacl/: shacl.mjs
demo/docs/examples/: foaf-person.md  reasoning-demo.md  role-bearer.md  role-realization.md  schema-article.md  textual-entity.md
demo/docs/shapes/foaf-person/: shape-data.ttl  shape.ttl
demo/docs/shapes/reasoning-demo/: all-values.ttl  equivalence.ttl  has-value.ttl  identity.ttl  intersection.ttl  properties.ttl  property-chain.ttl  rdfs.ttl  shape.ttl  some-values.ttl  subclass-vs-equivalent.ttl  union.ttl
demo/docs/shapes/schema-article/: shape-data.ttl  shape.ttl
demo/site/: 404.html  index.html  search.html  sitemap.xml
demo/site/examples/role-bearer/: index.html
demo/site/examples/role-realization/: index.html
demo/site/examples/textual-entity/: index.html
demo/site/search/: search_index.json
demo/site/shapes/role-bearer/: shape.ttl
docker/: bundle-reasoner.sh  entrypoint.sh  owl-reason.mjs
examples/foaf-person/: index.html
examples/reasoning-demo/: index.html
examples/role-bearer/: index.html
examples/role-realization/: index.html
examples/schema-article/: index.html
examples/textual-entity/: index.html
getting-started/: index.html
ontoink/: __init__.py  api.py  cluster.py  cluster_titles.py  fence.py  plugin.py  ttl_parser.py
ontoink/resources/: coi-serviceworker.js  ontoink-dsl.js  ontoink.css  ontoink.js
ontoink/resources/assets/reasoner/: bundle.mjs  konclude.mjs  worker.js
ontosniff/: index.html
ontoview/: __init__.py  fence.py  plugin.py  shacl_validator.py  ttl_parser.py
ontoview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ontoview/resources/: ontoview.css  ontoview.js
playground/: index.html
scripts/: build-shacl-bundle.mjs  build_antipattern_bundle.py  build_embed_bundle.py  debug_restrictions.py  generate_pptx.py  reorganize_antipatterns.py  smoke_restrictions.py  verify_antipatterns.py  verify_editor_buttons.py  verify_reasoners.sh
search/: search_index.json
shacl-editor/: index.html
shapes/foaf-person/: shape-data.ttl  shape.ttl
shapes/reasoning-demo/: shape-data.ttl
shapes/role-bearer/: shape-data.ttl  shape.ttl
shapes/role-realization/: shape-data.ttl  shape.ttl
shapes/schema-article/: shape-data.ttl  shape.ttl
shapes/textual-entity/: shape-data.ttl  shape.ttl
sparql-explorer/: index.html
tests/: conftest.py  test_api.py  test_fence.py  test_owl_restrictions.py  test_reasoners.py  test_shacl_validator.py  test_smell_extensions.py  test_ttl_parser.py
tests/fixtures/: invalid-data.ttl  reasoning-data.ttl  sample-data.ttl  sample-shape.ttl
