[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoview"
version = "0.2.0"
description = "Interactive ontology visualization, SHACL validation, and live TTL editing plugin for MkDocs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
maintainers = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
keywords = [
    "mkdocs",
    "ontology",
    "visualization",
    "shacl",
    "rdf",
    "turtle",
    "cytoscape",
    "linked-data",
    "semantic-web",
    "nfdi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.4",
    "rdflib>=6.0",
    "pyshacl>=0.25.0",
    "pymdown-extensions>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ISE-FIZKarlsruhe/ontoview"
Documentation = "https://ise-fizkarlsruhe.github.io/ontoview/"
Repository = "https://github.com/ISE-FIZKarlsruhe/ontoview"
Issues = "https://github.com/ISE-FIZKarlsruhe/ontoview/issues"

[project.entry-points."mkdocs.plugins"]
ontoview = "ontoview.plugin:OntoviewPlugin"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ontoview = ["resources/*.js", "resources/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
