[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoink"
version = "0.2.0"
description = "Interactive ontology visualization, SHACL validation, and live TTL editing plugin for MkDocs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
maintainers = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
keywords = [
    "mkdocs",
    "ontology",
    "visualization",
    "shacl",
    "rdf",
    "turtle",
    "cytoscape",
    "linked-data",
    "semantic-web",
    "nfdi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.4",
    "rdflib>=6.0",
    "pyshacl>=0.25.0",
    "pymdown-extensions>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/ISE-FIZKarlsruhe/ontoink"
Documentation = "https://ise-fizkarlsruhe.github.io/ontoink/"
Repository = "https://github.com/ISE-FIZKarlsruhe/ontoink"
Issues = "https://github.com/ISE-FIZKarlsruhe/ontoink/issues"

[project.entry-points."mkdocs.plugins"]
ontoink = "ontoink.plugin:OntoinkPlugin"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ontoink = ["resources/*.js", "resources/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
