[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoink"
version = "0.7.3"
description = "Interactive ontology visualization, SHACL validation, and live TTL editing plugin for MkDocs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
maintainers = [
    {name = "Ebrahim Norouzi", email = "ebrahim.norouzi@fiz-karlsruhe.de"},
]
keywords = [
    "mkdocs",
    "ontology",
    "visualization",
    "shacl",
    "rdf",
    "turtle",
    "cytoscape",
    "linked-data",
    "semantic-web",
    "nfdi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.4",
    "rdflib>=6.0",
    # pyshacl 0.30 dropped Python 3.9 and uses `str | X` PEP 604 unions at
    # class-body import time — crashes on 3.9 with `TypeError: unsupported
    # operand type(s) for |: 'type' and 'ABCMeta'`. Pin below 0.30 on 3.9;
    # let 3.10+ pull the latest.
    "pyshacl>=0.25.0,<0.30; python_version < '3.10'",
    "pyshacl>=0.25.0; python_version >= '3.10'",
    "pymdown-extensions>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
reasoning = [
    "owlready2>=0.25",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "owlready2>=0.25",
]
cluster = ["igraph>=0.11", "leidenalg>=0.10"]
topic   = ["anthropic>=0.34", "openai>=1.40"]

[project.urls]
Homepage = "https://github.com/ISE-FIZKarlsruhe/ontoink"
Documentation = "https://ise-fizkarlsruhe.github.io/ontoink/"
Repository = "https://github.com/ISE-FIZKarlsruhe/ontoink"
Issues = "https://github.com/ISE-FIZKarlsruhe/ontoink/issues"

[project.entry-points."mkdocs.plugins"]
ontoink = "ontoink.plugin:OntoinkPlugin"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
# resources/vendor/* ships the self-hosted third-party libs (Cytoscape, dagre,
# CodeMirror…) so the plugin can serve them from the built site instead of a CDN.
ontoink = [
    "resources/*.js",
    "resources/*.css",
    "resources/vendor/*",
    "resources/reasoner/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
